--- a/locale/ca_ES/manager.po
+++ b/locale/ca_ES/manager.po
@@ -2553,7 +2553,8 @@ msgstr "Utilitzar patrons predeterminats."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Sufix DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgid "doi.manager.settings.doiPrefix.description"
 msgstr ""
-"Introduïu un sufix DOI propi per a cada element publicat. Trobareu un camp "
-"d'entrada DOI addicional a la pàgina de metadades de cada element."
+"El prefix DOI l'assignen les agències de registre (p. ex.,<a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) i segueix el format "
+"10.xxxx (p. ex., 10.1234):"
