--- a/locale/cs_CZ/manager.po
+++ b/locale/cs_CZ/manager.po
@@ -2347,7 +2347,5 @@ msgstr "Použít výchozí vzor."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Suffix DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Pro každou publikovanou položku zadejte individuální suffix DOI. Na stránce "
-"metadat dat každé položky naleznete vstupní pole pro zadání přípony DOI."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Prefix DOI je přidělován registračními agenturami (např. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) a je ve formátu 10.xxxx (např. 10.1234):"
