--- a/locale/da_DK/manager.po
+++ b/locale/da_DK/manager.po
@@ -2419,7 +2419,5 @@ msgstr "Anvend standardformaterne."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI-suffiks"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Indtast et individuelt DOI-suffiks til hver publiceret element. Du finder et "
-"supplerende DOI-indtastningsfelt på hvert elements metadataside."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "DOI-præfikset tildeles af registreringsorganisationer (f.eks. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) og er i formatet 10.xxxx (f.eks. 10.1234):"
