--- a/locale/es_ES/manager.po
+++ b/locale/es_ES/manager.po
@@ -2398,7 +2398,5 @@ msgstr "Usar patrones por defecto."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Sufijo del DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Ingrese un sufijo DOI individual por cada elemento publicado. Encontrará un "
-"campo de entrada DOI adicional en la página de metadatos de cada elemento."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "El prefijo DOI lo asignan las agencias registradoras (p. ej., <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) y sigue el formato 10.xxxx (p. ej., 10.1234):"
