--- a/locale/fi_FI/manager.po
+++ b/locale/fi_FI/manager.po
@@ -2190,7 +2190,5 @@ msgstr "Käytä oletusmuotoiluja."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI-suffiksi"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Anna yksilöllinen DOI-suffiksi jokaiselle julkaistulle kohteelle. Jokaisen "
-"kohteen metatietosivulla on lisäkenttä DOI:n syöttämistä varten."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "DOI-prefiksi on rekisteröinnistä vastaavien tahojen (esim. <a href=\"http://www.crossref.org\" target=\"_new\">Crossrefin</a>) määrittämä ja on muodossa 10.xxxx (esim. 10.1234):"
