--- a/locale/gl_ES/manager.po
+++ b/locale/gl_ES/manager.po
@@ -2429,7 +2429,8 @@ msgstr "Usar padróns por defecto."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Sufixo do DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgid "doi.manager.settings.doiPrefix.description"
 msgstr ""
-"Introduza un sufixo DOI individual para cada elemento publicado. Atoparás un "
-"campo de entrada DOI adicional na páxina de metadatos de cada elemento."
+"O prefixo DOI é asignado polas axencias de rexistro (por exemplo, <a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) e ten o formato "
+"10.xxxx (por exemplo, 10.1234):"
