--- a/locale/hu_HU/manager.po
+++ b/locale/hu_HU/manager.po
@@ -2607,7 +2607,5 @@ msgstr "Használja az alapértelmezett mintákat."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI utótag (suffix)"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Adjon meg egy egyedi DOI utótagot (suffix) minden egyes közzétett tételhez. "
-"Az egyes tételek metaadat oldalán találni fog egy további DOI beviteli mezőt."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "A DOI előtagot regisztrációs ügynökségek (pl. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) osztják ki, ebben a formátumban 10.xxxx (például 10.1234):"
