--- a/locale/id_ID/manager.po
+++ b/locale/id_ID/manager.po
@@ -2382,3 +2382,7 @@ msgstr "Akhiran DOI dapat dengan format apapun, tetapi harus unik di antara semu
 
 msgid "doi.manager.settings.doiSuffixDefault"
 msgstr "Gunakan pola default."
+
+#, fuzzy
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Awalan DOI ditugaskan dengan agensi pendaftaran (contoh <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) dan dalam format 10.xxxx (contoh 10.1234):"
