--- a/locale/mk_MK/manager.po
+++ b/locale/mk_MK/manager.po
@@ -2523,8 +2523,8 @@ msgstr "Користете стандардни обрасци."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Додаток на ДОИ"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgid "doi.manager.settings.doiPrefix.description"
 msgstr ""
-"Внесете индивидуален додаток на ДОИ за секоја објавена ставка. Ќе најдете "
-"дополнително поле за внесување DOI на страницата со мета-податоци на секоја "
-"ставка."
+"Префиксот DOI е доделен од агенциите за регистрација (на пр. <a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) и е во формат "
+"10.xxxx (на пример, 10.1234):"
