--- a/locale/nb_NO/manager.po
+++ b/locale/nb_NO/manager.po
@@ -2370,7 +2370,8 @@ msgstr "Bruk standardformatene."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI-suffiks"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgid "doi.manager.settings.doiPrefix.description"
 msgstr ""
-"Skriv inn et individuelt DOI-suffiks for hvert publiserte objekt. Du finner "
-"et ekstra DOI-inntastingsfelt på metadata-siden til hvert objekt."
+"DOI-prefikset tildeles av registreringsbyråer (som <a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>), og er i formatet "
+"10.xxxx (f.eks. 10.1234):"
