--- a/locale/pl_PL/manager.po
+++ b/locale/pl_PL/manager.po
@@ -2251,7 +2251,5 @@ msgstr "Korzystaj z domyślnego wzoru."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Sufiks DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Wprowadź indywidualny sufiks DOI dla każdej publikowanej pozycji. Znajdziesz "
-"dodatkowy pole wejściowe DOI dla każdej pozycji na jego stronie z metadanymi."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Prefiks DOI jest przydzielany przez organizacje rejestrujące, np. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a> i posiada format 10.xxxx (np. 10.1234):"
