--- a/locale/pt_BR/manager.po
+++ b/locale/pt_BR/manager.po
@@ -2362,7 +2362,5 @@ msgstr "Use os padrões predefinidos."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Sufixo DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Digite um sufixo DOI individual para cada item publicado. Você encontrará um "
-"campo de entrada DOI adicional na página de metadados de cada item."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "O prefixo DOI é atribuído por agências de registro (ex.: <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) e possui o formato 10.xxxx (ex.: 10.1234):"
