--- a/locale/ru_RU/manager.po
+++ b/locale/ru_RU/manager.po
@@ -2240,8 +2240,5 @@ msgstr "Использовать шаблоны по умолчанию."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Суффикс DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Ввести индивидуальный суффикс DOI для каждого опубликованного элемента. Вы "
-"увидите дополнительное поле ввода DOI на странице метаданных для каждого "
-"элемента."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Префикс DOI назначается регистрационными агентствами (например, <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) и представляется в формате 10.xxxx (например, 10.1234):"
