--- a/locale/sv_SE/manager.po
+++ b/locale/sv_SE/manager.po
@@ -2256,7 +2256,5 @@ msgstr "Använd default-mönster."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI-suffix"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Ange ett DOI-suffix för varje enskilt objekt. Det finns ett DOI-fält på "
-"varje objekts metadata-sida."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "DOI-prefix delas ut av t.ex. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a> och är i formatet 10.xxxx (t.ex. 10.1234):"
