--- a/locale/tr_TR/manager.po
+++ b/locale/tr_TR/manager.po
@@ -2386,7 +2386,5 @@ msgstr "varsayılan örneği/şablonu kullan."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI Son eki"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Yayınlanan her öğe için ayrı bir DOI son eki girin. Her bir öğenin üst veri "
-"sayfasında ek bir DOI giriş alanı bulacaksınız."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "DOI Ön Ekleri kayıt ajansları (Örneğin; <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) tarafından atanmıştır ve biçimi 10.xxxx şeklindedir (Örneğin; 10.1234):"
