--- a/locale/uk_UA/manager.po
+++ b/locale/uk_UA/manager.po
@@ -2065,7 +2065,5 @@ msgstr "Використовувати усталені шаблони."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "Суфікс DOI"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Введіть індивідуальний суфікс DOI для кожного опублікованого елемента. Ви "
-"знайдете додаткове поле введення DOI на сторінці метаданих кожного елемента."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Префікс DOI призначається виданню реєстраційною агенцією (наприклад, <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>), його формат 10.xxxx (наприклад, 10.1234):"
