--- a/locale/de_DE/manager.po
+++ b/locale/de_DE/manager.po
@@ -2333,8 +2333,5 @@ msgstr "Die Standardmuster benutzen."
 msgid "doi.manager.settings.doiSuffix"
 msgstr "DOI-Suffix"
 
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr ""
-"Ein individuelles DOI-Suffix für jede Publikation eingeben. Ihnen wird in "
-"diesem Fall ein weiteres Feld zur Eintragung der DOI auf den Metadaten-"
-"Seiten jeder Publikation zur Verfügung gestellt."
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "Der DOI-Präfix wird von Registrierungsagenturen (z.B. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) vergeben und hat das Format 10.xxxx (z.B. 10.1234):"
