--- a/locale/fr_FR/manager.po
+++ b/locale/fr_FR/manager.po
@@ -2499,3 +2499,10 @@ msgstr ""
 
 msgid "doi.manager.settings.doiSuffixDefault"
 msgstr "Utiliser les modèles par défaut."
+
+#, fuzzy
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"Le préfixe DOI est attribué par des agences (par exemple <a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) et se présente sous "
+"la forme 10.xxxx (par exemple 10.1234) :"
