--- a/locale/kk_KZ/manager.po
+++ b/locale/kk_KZ/manager.po
@@ -22,3 +22,10 @@ msgstr ""
 
 msgid "doi.manager.settings.doiSuffixDefault"
 msgstr "Негізгі үлгілерді қолданыңыз."
+
+#, fuzzy
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"DOI префиксін тіркеу агенттіктері тағайындайды (мысалы, <a href=\""
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) және 10.xxxx "
+"форматында ұсынылады (мысалы, 10.1234):"
