--- a/locale/en_US/api.po
+++ b/locale/en_US/api.po
@@ -51,7 +51,7 @@ msgid "api.contexts.400.localesNotSupported"
 msgstr "The following locales are not supported: {$locales}."
 
 msgid "api.dois.403.editItemOutOfContext"
-msgstr "You cannot edit an item's DOI that is not in this context"
+msgstr "You cannot edit an item's DOI that is not in this context."
 
 msgid "api.dois.404.contextNotFound"
 msgstr "This endpoint is not available from the site-wide namespace, and must be requested for a given context."
