--- a/locale/en_US/api.po
+++ b/locale/en_US/api.po
@@ -62,6 +62,9 @@ msgstr "This endpoint is not available from the site-wide namespace, and must be
 msgid "api.dois.404.doiNotFound"
 msgstr "The DOI you requested was not found."
 
+msgid "api.dois.404.pubObjectNotFound"
+msgstr "The publication object you requested was not found."
+
 msgid "api.dois.400.noUnpublishedItems"
 msgstr "Unpublished items cannot be exported/deposited. Please deselect unpublished items and try again."
 
